Make background color for selected left-side menu item work. Otherwise the white text on the white background is not visible. TODO: need to fix the disappearing of the arrow icon
git-svn-id: svn://localhost/jahia/trunk@197 69c369ed-ed09-0410-a4a1-e19a46c23626

--- a/templates/test-templates/src/main/webapp/common/css/styles.css
+++ b/templates/test-templates/src/main/webapp/common/css/styles.css
@@ -490,7 +490,7 @@ div.sideMenu {
 }
 
 .sideMenu li a:hover {
-    background-color: #666666;
+    background-color: #666666 !important;
     color: #FFFFFF;
     line-height: 20px;
 }
